Created new markup

--- a/src/styles/general/_fonts.scss
+++ b/src/styles/general/_fonts.scss
@@ -25,3 +25,10 @@
   font-weight: 700;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/montserratblack.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+}
