--- a/src/styles/general/_commont.scss
+++ b/src/styles/general/_commont.scss
@@ -1,7 +1,6 @@
 .hide-placeholder {
   @include hidePlaceholder {
     opacity: 1;
-    //font-weight: 500;
     font-size: 11px;
     color: #333;
     text-transform: uppercase;
@@ -21,6 +20,7 @@ h2 {
   font-size: 31px;
   font-weight: 700;
   text-transform: uppercase;
+  line-height: 40px;
 }
 
 .text-bold {
@@ -56,6 +56,7 @@ h2 {
 .tab-pane:not(.active) {
   display: none;
 }
+
 .text-red {
   color: $red;
 }
