--- a/src/styles/snippets/_main.scss
+++ b/src/styles/snippets/_main.scss
@@ -3,6 +3,50 @@
   background-size: cover;
 }
 
+.main-header {
+  width: 738px;
+}
+
+.main-list {
+  margin-left: -5px;
+  margin-right: -5px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main-item {
+  max-width: 25%;
+  flex-basis: 25%;
+  padding: 5px;
+  text-align: center;
+}
+
+.main-item__inner {
+  height: 123px;
+  padding: 5px 0 0;
+  background-color: #fff;
+  position: relative;
+}
+
+.main-item__text {
+  height: 36px;
+  font-size: 13px;
+  font-weight: 600;
+  line-height: 1.2;
+  position: absolute;
+  bottom: 6px;
+  width: 100%;
+
+  &::before {
+    width: 159px;
+    height: 2px;
+    margin: 0 auto 3px;
+    display: block;
+    background-color: #416192;
+    content: '';
+  }
+}
+
 .main-inner {
   padding-top: 17px;
   padding-bottom: 17px;
@@ -11,12 +55,17 @@
 }
 
 .main-box {
-  max-width: 355px;
+  max-width: 363px;
+  margin-left: -5px;
   text-align: center;
   color: #fff;
 
   .btn-primary {
     box-shadow: 2px 4px 0 #53000b, 9px 9px 10px rgba(0, 0, 0, 0.25);
+  }
+
+  .form-callback__group {
+    margin-bottom: 18px;
   }
 }
 
@@ -28,18 +77,19 @@
 
 .main-pre-title {
   font-size: 30px;
-  margin-bottom: 15px;
+  margin-bottom: 17px;
   line-height: 1;
   font-weight: 500;
 }
 
 .main-discount {
   padding-top: 3px;
-  height: 44px;
-  margin-bottom: 30px;
+  height: 50px;
+  margin-bottom: 35px;
   font-size: 24px;
   font-weight: 600;
   background: url(../img/decor/splash.png) no-repeat center;
+  background-size: contain;
 }
 
 .main-discount__percent {
