--- a/src/styles/snippets/_header.scss
+++ b/src/styles/snippets/_header.scss
@@ -38,22 +38,25 @@
     content: '';
   }
 }
+
 .header-decor__text {
   margin-bottom: 5px;
   text-transform: uppercase;
   line-height: 1;
   order: 1;
 }
+
 .header-decor__text-head {
   margin-bottom: 5px;
   font-size: 21px;
   font-weight: 900;
   color: $red;
+  letter-spacing: .05rem;
 }
 
 .header-decor__text-info {
   font-size: 14px;
-  font-weight: 700;
+  font-weight: 900;
 }
 
 .header-support {
@@ -65,6 +68,10 @@
   font-size: 12px;
   letter-spacing: .01rem;
   font-weight: 500;
+
+  .text-bold {
+    font-weight: 900;
+  }
 }
 
 .header-support__phone {
@@ -95,7 +102,7 @@
 }
 
 .header-support__call-text {
-  font-weight: 700;
+  font-weight: 900;
   color: $blueColor;
   cursor: pointer;
   transition: color .3s;
