--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,5 @@
 @import "general/mixin";
-@import "general/fonts";
+//@import "general/fonts";
 @import "general/settings";
 @import "vendors/jquery.fancybox";
 @import "vendors/bootstrap";
